--- a/templates/show_room.html
+++ b/templates/show_room.html
@@ -6,7 +6,7 @@ $def with (room)
 $room.description
 </pre>
 
-$if room.name == "Death" or room.name == "The End":
+$if room.mode == "end":
     <p><a href="/">Play Again?</a></p>
 $else:
     <p>
