added 10 keypad guesses to Laser Weapon Armory

--- a/templates/show_room.html
+++ b/templates/show_room.html
@@ -6,6 +6,20 @@ $def with (room)
 $room.description
 </pre>
 
+$if room.count:
+    $if room.count == 10:
+        <pre>
+        You have $room.count tries left. 
+        </pre>
+    $if room.count < 10 and room.count > 1:
+        <pre>
+        BZZZZEDDD! You hae $room.count tries left.
+        </pre>
+    $if room.count == 1:
+        <pre>
+        BZZZZEDDD! You have $room.count try left.
+        </pre>
+
 $if room.show_help:
     <pre>
     $room.help
