added unit tests using Paste and Nose

--- a/templates/show_room.html
+++ b/templates/show_room.html
@@ -13,7 +13,7 @@ $if room.count:
         </pre>
     $if room.count < 10 and room.count > 1:
         <pre>
-        BZZZZEDDD! You hae $room.count tries left.
+        BZZZZEDDD! You have $room.count tries left.
         </pre>
     $if room.count == 1:
         <pre>
