--- a/templates/layout.html
+++ b/templates/layout.html
@@ -5,8 +5,7 @@ $def with (content)
     <title>Gothons From Planet Percal #25</title>
 </head>
 <body>
-
-$:content
-
+<div style="text-align:left; float:right;"><a href="/logout">Logout</a></div>
+<div>$:content</div>
 </body>
 </html>
