--- a/templates/communs/login.html
+++ b/templates/communs/login.html
@@ -1,3 +1,9 @@
+$def with (message)
+<p>New User? <a href="/register">Please register</a></p>
+
+$if message:
+    <p>$message</p>
+
 <form action="/login" method="POST">
     <table id="login">
         <tr>
