--- a/templates/communs/register.html
+++ b/templates/communs/register.html
@@ -1,3 +1,8 @@
+$def with (message)
+
+$if message:
+    <p>$message</p>
+
 <form action="/register" method="POST">
     <table id="register">
         <tr>
